--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,11 +9,23 @@ h1 {
   font-size: 50px;
   text-align: center;
   color: white;
-
 }
+h2 {
+  font-size: 42px;
+  font-weight: 300;
+  text-align: center;
+  color: white;
+}
+
 
 div {
   text-align: center;
+
+}
+
+p{
+text-align: center;
+font-size: 21px;
 }
 
 a {
